add themes and add calculator functionalities

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;300;400;700&family=Noto+Sans+Tangsa:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   </head>
   <body  id="background" class="bg-[#2B4173] transition-all">
     <div class="max-w-[500px] w-full m-auto">
-      <div class="flex flex-col p-8">
+      <div class="flex flex-col p-8"> 
         <div id="toggle-theme" class="text-xs text-white text-right w-96 max-w-full"><pre>  1  2  3</pre></div>
         <div id="header" class="flex justify-between item-center text-white max-w-full w-96">
           <h1 class=" text-2xl font-bold">Calc</h1>
@@ -26,11 +26,7 @@
           </div>
         </div>
         <div id="screen" class="mt-4 w-96 h-24 max-w-full bg-[#182034] rounded-lg">
-          <div
-            id="output" class="float-right p-6 font-['League Spartan'] text-white font-bold text-3xl"
-          >
-            3,400
-          </div>
+          <input  id="input"  class="number  bg-transparent w-96 outline-none border-none text-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
         </div>
         <div
           id="keypadBackground" class="w-96 max-w-full bg-[#232C43] mt-2 rounded-lg text-[#444B5A]"
@@ -38,86 +34,86 @@
           <div
             class="grid grid-cols-4 gap-4 p-4 font-bold font-['League Spartan'] text-2xl"
           >
-            <button id="btn-7"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-7" 
+              class="btn   w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               7
             </button>
-            <button id="btn-8"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-8" 
+              class=" btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               8</button
-            ><button id="btn-9"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-9" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               9
             </button>
-            <button id="btn-del"
-              class="w-full max-w-2xl h-14 bg-[#637097] hover:bg-[#584D8F] rounded-lg shadow-[0px_3px_0px_#404E72] text-white font-semibold"
+            <button id="btn-del" value="Del"
+              class="btn w-full max-w-2xl h-14 bg-[#637097] hover:bg-[#584D8F] rounded-lg shadow-[0px_3px_0px_#404E72] text-white font-semibold"
             >
               Del</button
-            ><button id="btn-4"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-4" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               4
             </button>
-            <button id="btn-5"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-5" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               5
             </button>
-            <button id="btn-6"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-6" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               6</button
-            ><button id="btn-plus"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-plus" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               +
             </button>
             <button id="btn-1"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               1</button
-            ><button id="btn-2"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-2" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               2
             </button>
-            <button id="btn-3"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-3"  
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               3</button
-            ><button id="btn-minus"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-minus" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               -
             </button>
-            <button id="btn-point"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-point" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               .</button
-            ><button id="btn-0"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            ><button id="btn-0" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               0
             </button>
-            <button id="btn-div"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+            <button id="btn-div" 
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
               /</button
             ><button id="btn-multi"
-              class="w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
+              class="btn w-full max-w-2xl h-14 bg-[#EAE3DC] hover:bg-[#FFFFFF] rounded-lg shadow-[0px_3px_0px_#B4A597]"
             >
-              X
+              *
             </button>
-            <button id="btn-reset"
-              class="col-span-2 h-14 bg-[#637097]  rounded-lg shadow-[0px_3px_0px_#404E72] text-white font-semibold"
+            <button id="btn-reset" value="RESET"
+              class="btn col-span-2 h-14 bg-[#637097]  rounded-lg shadow-[0px_3px_0px_#404E72] text-white font-semibold"
             >
               RESET
             </button>
-            <button id="btn-is-equal"
-              class="h-14 col-span-2 bg-[#D03F2F]  rounded-lg text-white shadow-[0px_3px_0px_#93261A]"
+            <button id="btn-is-equal" value="="
+              class="btn  h-14 col-span-2 bg-[#D03F2F]  rounded-lg text-white shadow-[0px_3px_0px_#93261A]"
             >
               =
             </button>
@@ -126,5 +122,6 @@
       </div>
     </div>
     <script src="./app.js"></script>
+    <script src="./calculator.js"></script>
   </body>
 </html>
