--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div id="screen" class="mt-4 w-96 h-24 max-w-full bg-[#182034] rounded-lg">
-          <input  id="input"  class="number  bg-transparent w-96 outline-none border-none text-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
+          <input  id="input"  class="number  bg-transparent w-96  max-w-full outline-none border-none text-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
         </div>
         <div
           id="keypadBackground" class="w-96 max-w-full bg-[#232C43] mt-2 rounded-lg text-[#444B5A]"
