--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div id="screen" class="mt-4 w-96 h-24 max-w-full bg-[#182034]  rounded-lg">
-          <input type="button" id="input"  class="number  bg-transparent w-92 max-w-full outline-none border-none float-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
+          <input type="button" id="input"  class="number text-white bg-transparent w-92 max-w-full outline-none border-none float-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
          </div>
         <div
           id="keypadBackground" class="w-96 max-w-full bg-[#232C43] mt-2 rounded-lg text-[#444B5A]"
