add favicon file and change in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./favicon-img/favicon-32x32.png">
     <!-- <link rel="stylesheet" href="./style.css"> -->
     <link
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;300;400;700&family=Noto+Sans+Tangsa:wght@400;500;700&display=swap"
@@ -13,8 +14,8 @@
     <title>Calculator</title>
   </head>
   <body  id="background" class="bg-[#2B4173] transition-all">
-    <div class="max-w-[500px] w-full m-auto">
-      <div class="flex flex-col p-6 mt-16 ml-2"> 
+    <div class="max-w-[400px] w-full m-auto">
+      <div class="flex flex-col p-6 mt-16 ml-2 "> 
         <div id="toggle-theme" class="text-xs text-white text-right w-96 max-w-full px-1"><pre>  1  2  3</pre></div>
         <div id="header" class="flex justify-between item-center text-white max-w-full w-96">
           <h1 class=" text-2xl font-bold">Calc</h1>
@@ -26,7 +27,7 @@
           </div>
         </div>
         <div id="screen" class="mt-4 w-96 h-24 max-w-full bg-[#182034]  rounded-lg">
-          <input type="button" id="input"  class="number text-white bg-transparent w-92 max-w-full outline-none border-none float-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
+          <input type="button" id="input"  class="number text-white bg-transparent  max-w-full outline-none border-none float-right p-6 font-['League Spartan'] text-white font-bold text-3xl">
          </div>
         <div
           id="keypadBackground" class="w-96 max-w-full bg-[#232C43] mt-2 rounded-lg text-[#444B5A]"
